Finally fixed the search bug on mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
 
 button {
     @apply cursor-pointer;
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
+      
 }
 
 h-center {
